--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
           <a href="https://github.com/Gilgabunada" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://www.facebook.com/gil.gabunada/" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://www.instagram.com/migen_18?igsh=bXlqaHZjM2NicXEw" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://discord.com/users/1054240944981028864" target="_blank"><i class="fab fa-discord"></i></a>
+
         </p>
       </div>
       
